<resources>
    <string name="app_name">Android Developer Nano</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Football Scores App</string>
    <string name="library">Library App</string>
    <string name="build">Build It Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
</resources>
